<resources>
    <string name="app_name">Мой кинопоиск</string>
    <string name="skillcinema">Skillcinema</string>
    <string name="skip">Пропустить</string>
    <string name="find_out_about_premieres">Узнавай о премьерах</string>
    <string name="create_collections">Создавай коллекции</string>
    <string name="share_with_friends">Делись с друзьями</string>
    <string name="Series">Сериалы</string>
    <string name="TOP_250">Топ-250</string>
    <string name="dynamic">Динамические подборки</string>
    <string name="Popular">Популярное</string>
    <string name="Premieres">Премьеры</string>
    <string name="all">Все</string>
    <string name="category_movies">Категория</string>
    <string name="movie_poster">Постер фильма</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="watch_later">Хочу посмотреть</string>
    <string name="already_watched">Уже просмотрено</string>
    <string name="share">Поделиться</string>
    <string name="show_more">Показать больше</string>
    <string name="seasons">Сезоны</string>
    <string name="actors">Актеры</string>
    <string name="gallery">Галерея</string>
    <string name="similar_movies">Похожие фильмы</string>
    <string name="top_films">Лучшее</string>
    <string name="full_filmography">Фильмография</string>
    <string name="filmStarred">В фильме снимались</string>
    <string name="filmWasWorked">Над фильмом работали</string>
    <string name="home_page_icon">Домашняя страница</string>
    <string name="search">Поиск</string>
    <string name="user">Пользователь</string>
    <string name="search_settings">Настройки поиска</string>
    <string name="sectionGallery">Галерея</string>
    <string name="gallery_type_shooting">Со съёмок</string>
    <string name="gallery_type_still">Кадры из фильма</string>
    <string name="gallery_type_poster">Постеры</string>
    <string name="gallery_type_fan_art">Фан-арты</string>
    <string name="gallery_type_promo">Промо</string>
    <string name="gallery_type_concept">Концепт-арты</string>
    <string name="gallery_type_wallpaper">Обои</string>
    <string name="gallery_type_cover">Обложки</string>
    <string name="gallery_type_screenshot">Скриншоты</string>
    <string name="gallery_type_other">Другие</string>
    <string name="photo">Описание фото</string>
    <string name="serial_poster">Постер сериала</string>
    <string name="viewed">Просмотрено</string>
    <string name="collections">Коллекции</string>
    <string name="create_your_own_collection">+ Создай свою коллекцию</string>
    <string name="create_collection_title">Новая коллекция</string>
    <string name="create_collection_action">Создать коллекцию</string>
    <string name="collection_name_hint">Название коллекции</string>
    <string name="collection_name_empty">Введите название коллекции</string>
    <string name="create_action">Создать</string>
    <string name="save_action">Сохранить</string>
    <string name="cancel_action">Отмена</string>
    <string name="edit_collection_title">Редактировать коллекцию</string>
    <string name="delete_collection_title">Удалить коллекцию</string>
    <string name="delete_collection_message">Удалить эту коллекцию?</string>
    <string name="edit_collection_action">Редактировать</string>
    <string name="delete_collection_action">Удалить</string>
    <string name="were_you_interested">Вам было интересно</string>
    <string name="collection_favorite">Любимые</string>
    <string name="favorite_collection">Любимые</string>
    <string name="favorite_collection_card">Любимые</string>
    <string name="favorite_collection_empty">В коллекции пока нет любимых фильмов</string>
    <string name="want_to_see_collection_empty">В коллекции пока нет фильмов к просмотру</string>
    <string name="collection_empty">В коллекции пока нет фильмов</string>
    <string name="want_to_see">Хочу посмотреть</string>
    <string name="want_to_see_collection_text">Хочу посмотреть</string>
    <string name="all_actors">Все актеры</string>
    <string name="no_actors_available">Список актеров пуст</string>
    <string name="error_movie_not_found">Не удалось найти фильм</string>
    <string name="list_of_actors">Список актеров</string>
    <string name="all_crew">Вся съемочная группа</string>
    <string name="no_crew_available">Список съемочной группы пуст</string>
    <string name="list_of_crew">Список съемочной группы</string>
    <string name="all_photos">Все фото</string>
    <string name="no_photos_available">Нет доступных фотографий</string>
    <string name="error_loading_actor">Не удалось загрузить данные об актере</string>
    <string name="_0">0</string>
    <string name="not_selected">Не выбрано</string>
    <string name="search_type_all">Искать все</string>
    <string name="search_type_films">Только фильмы</string>
    <string name="search_type_series">Только сериалы</string>
    <string name="year_from">Год от</string>
    <string name="year_to">Год до</string>
    <string name="hide_viewed">Скрывать просмотренные</string>
    <string name="apply">Применить</string>
    <string name="order_rating">По рейтингу</string>
    <string name="order_popularity">По популярности</string>
    <string name="order_date">По дате</string>
    <string name="rating_range_value">Рейтинг: %1$d - %2$d</string>

    <!-- Search settings screen -->
    <string name="search_show_label">Показывать</string>
    <string name="search_show_all">Все</string>
    <string name="search_show_films">Фильмы</string>
    <string name="search_show_series">Сериалы</string>
    <string name="search_country">Страна</string>
    <string name="search_genre">Жанр</string>
    <string name="search_year">Год</string>
    <string name="search_rating">Рейтинг</string>
    <string name="search_sort_label">Сортировать</string>
    <string name="search_sort_date">Дата</string>
    <string name="search_sort_popularity">Популярность</string>
    <string name="search_sort_rating">Рейтинг</string>
    <string name="search_not_viewed">Не просмотрен</string>
    <string name="search_value_any">любой</string>
    <string name="search_year_range">с %1$d до %2$d</string>
    <string name="search_rating_range">%1$d – %2$d</string>
    <string name="back">Назад</string>

    <!-- Actor detail / filmography -->
    <string name="actor_photo">Фотография актера</string>
    <string name="to_the_list">К списку ></string>
    <string name="filmography_empty">Фильмография пуста</string>
    <string name="error_loading_films">Не удалось загрузить фильмографию</string>

    <plurals name="films_count">
        <item quantity="one">%d фильм</item>
        <item quantity="few">%d фильма</item>
        <item quantity="many">%d фильмов</item>
        <item quantity="other">%d фильма</item>
    </plurals>

</resources>