<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/radio_group_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton android:id="@+id/radio_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_type_all"/>
            <RadioButton android:id="@+id/radio_films" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_type_films"/>
            <RadioButton android:id="@+id/radio_series" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_type_series"/>
        </RadioGroup>

        <Spinner android:id="@+id/spinner_country" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/spinner_genre" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/edit_year_from" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/year_from" android:inputType="number"/>
        <EditText android:id="@+id/edit_year_to" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/year_to" android:inputType="number"/>
        <TextView android:id="@+id/text_rating_value" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/slider_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="1"
            android:valueTo="10"
            android:stepSize="1" />
        <Spinner android:id="@+id/spinner_order" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <Switch android:id="@+id/switch_hide_viewed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hide_viewed"/>
        <Button android:id="@+id/button_apply" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/apply"/>
    </LinearLayout>
</ScrollView>