<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- FragmentContainerView для навигации -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navGraph="@navigation/nav_graph"
        app:defaultNavHost="true" />

    <LinearLayout
        android:id="@+id/navigationMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/home_page_icon"
            android:focusable="true"
            android:src="@drawable/ic_home" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/search"
            android:focusable="true"
            android:src="@drawable/ic_search" />

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/user"
            android:focusable="true"
            android:src="@drawable/ic_user" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>