<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="146dp"
    android:layout_height="146dp"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/gray"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/tvFavoriteCardImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/collection_favorite"
            android:src="@drawable/ic_favorite_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFavoriteCardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_collection_card"
            app:layout_constraintBottom_toTopOf="@id/tvCounter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFavoriteCardImage" />

        <TextView
            android:id="@+id/tvCounter"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:background="@drawable/counter_background"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/_0"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFavoriteCardText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>