<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/onboarding2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="26dp"
        android:text="@string/skillcinema"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/onboarding2_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/onboardingSkipButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@android:color/darker_gray"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@id/onboarding2_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/onboarding2_text"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SmallSp" />

    <ImageView
        android:id="@+id/onboarding2_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/onboarding2"
        app:layout_constraintBottom_toTopOf="@id/onboarding2_bottom_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding2_text" />

    <TextView
        android:id="@+id/onboarding2_bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="26dp"
        android:text="@string/create_collections"
        android:textColor="@color/black"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding2_view"
        tools:ignore="MissingConstraints,RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>